--- a/projects.html
+++ b/projects.html
@@ -173,7 +173,7 @@
                     The tools are embedded within this framework and run automatically when files are uploaded to GitHub. The feedback can be further customized based on instructor preferences or tailored to include multiple input-output tests to be run
                     on specific assignments. The results are displayed via a web page, making it easier for novices to understand the results. We are developing the tools that can be used in future introductory Java courses.</p>
                 </br>
-                <p><b>Current members:</b> Gabe Acuna, Ed Abshire
+                <p><b>Current members:</b>  Margaret Lanphere, An Nguyen, Jeremy Zhang
                     </br>
                     <b>Project Category:</b> Artificial Intelligence</p>
             </div>
